--- a/style.css
+++ b/style.css
@@ -19,3 +19,43 @@
     cursor: pointer;
     background-image: linear-gradient(to bottom, #FF5B9B 0%, #FF136F 100%);
 }
+.cat1{
+    background-color: orange;
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat2{
+    background-color: purple;
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat3{
+    background-color: blue;
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.categories h2{
+    color:#fff;
+}
+
+.categories img{
+    width: 100px;
+}
+.card{
+    border:none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+}
+.card-footer{
+    background-color: #fff;
+    border-top: none;
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe h6{
+    color: gray;
+}
+footer{
+    text-align: center;
+}
